--- a/head.html
+++ b/head.html
@@ -53,6 +53,9 @@
   (window,["alloy"]);
 </script>
 <!-- Library loader -->
+
+<script src="https://assets.adobedtm.com/6c2a1100b19a/53f7cbcfde0b/launch-7dc031601b0e-development.min.js" async></script>
+
 <script src="https://cdn1.adoberesources.net/alloy/2.31.1/alloy.min.js" async></script>
 <script>
  window.alloyConfig = {
